# DWX2018

./: README.md
ElmSession/: README.md
ElmSession/Demo/: README.md  makefile
ElmSession/Demo/client/Elm/: .gitignore  Main.elm  README.md  elm-package.json  makefile
ElmSession/Demo/client/Elm/src/: Main.elm  Routes.elm
ElmSession/Demo/client/Elm/src/Api/: Task.elm
ElmSession/Demo/client/Live/: elm-package.json  makefile
ElmSession/Demo/client/Live/src/: Main.elm
ElmSession/Demo/client/Live/static/: lib
ElmSession/Demo/client/TEA/: .gitignore  elm-package.json  makefile
ElmSession/Demo/client/TEA/src/: Main.elm
ElmSession/Demo/client/TEA/static/: index.html
ElmSession/Demo/server/Csharp/: .gitignore  Program.cs  README.md  Startup.cs
ElmSession/Demo/server/Csharp/Controllers/: HomeController.cs  TodosController.cs
ElmSession/Demo/server/Csharp/Models/: Task.cs
ElmSession/Demo/server/Csharp/Properties/: launchSettings.json
ElmSession/Demo/server/Fsharp/: .gitignore  Program.fs  README.md  Tasks.fs  TodoServer.fsproj  TodoServer.sln  makefile
ElmSession/Demo/server/Haskell/: .gitignore  LICENSE  README.md  TodoServer.cabal  makefile
ElmSession/Demo/server/Haskell/TodoServer/: makefile
ElmSession/Demo/server/Haskell/TodoServer/app/: Main.hs
ElmSession/Demo/server/Haskell/TodoServer/src/: App.hs  Models.hs  Page.hs
ElmSession/Demo/server/Haskell/src/: App.hs  Db.hs  Models.hs  Page.hs  RestApi.hs  RouteApi.hs  Ws.hs
ElmSession/Demo/static/: index.html  style.css
ElmSession/Slides/: .gitignore  .markdownlint.json  Grafiken.pptx  custom.css  makefile  talk.md
Usergroup/: CoinChange.fsx  EventSourcing.fsx  Fallstricke.fsx  Fizzbuzz.fsx  README.md  Tennis.fsx
Usergroup/TDD/: Program.fs  TDD.fsproj
reveal/css/theme/: beige.css
(+5 files in other folders)
